--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,66 @@ body,
   background-color: white;
 }
 
+.pic-tile:hover {
+  background-color: rgba(0, 0, 0, 0) !important;
+}
+
+.enter {
+  color: black;
+  position: absolute;
+  font-size: 11px;
+  bottom: 15px;
+  text-transform: uppercase;
+  font-weight: 100;
+  letter-spacing: 2px;
+  opacity: 0;
+  transition: opacity 2s ease;
+}
+
+.enter.fade {
+  opacity: 1;
+}
+
+.logo-tile:hover {
+  cursor: pointer;
+  background-color: orange !important;
+}
+
+.clickable-logo {
+  position: absolute;
+  background: orange;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 31px;
+  font-weight: 100;
+  letter-spacing: 5px;
+  opacity: 0;
+  cursor: pointer;
+  pointer-events: all !important;
+}
+
+.clickable-logo:hover {
+  opacity: 1;
+}
+
+.logo-layer {
+  pointer-events: none;
+}
+
+.logo-img {
+  transform: scale(1);
+  transition: transform 0.5s ease;
+}
+
+.logo-img.fade {
+  transform: scale(0.8) translateY(-12px);
+}
+
 .bg {
   background-color: white;
   transition: background-color 0.5s ease;
