--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,11 @@ body,
   opacity: 0;
   border-radius: 10px;
   margin: 10px;
+  display: none;
+}
+
+.insta-icon.show {
+  display: block;
 }
 
 .clickable-logo:hover {
